Simplifies removal and uses livequery extension to remove ads as soon as they're created.

--- a/extension/background.html
+++ b/extension/background.html
@@ -1,13 +1,14 @@
-    <script>
-      // Called when a message is passed from the content script (pandora-enhancer.js - i need to rename that too) - json
-      function showPageAction(request, sender, sendResponse) {
-        //console.log(sender);
+<script>
+	// Called when a message is passed from the content script (pandora-enhancer.js - i need to rename that too) - json
+	function showPageAction(request, sender, sendResponse)
+	{
+		//console.log(sender);
 		chrome.pageAction.show(sender.tab.id);
 
 		//sendResponse json
-        sendResponse({});
-      };
+		sendResponse({});
+	};
 
-      // Listen for the content script to send a message to the background page.
-      chrome.extension.onRequest.addListener(showPageAction);
-    </script>
+	// Listen for the content script to send a message to the background page.
+	chrome.extension.onRequest.addListener(showPageAction);
+</script>
