--- a/extension/settings.html
+++ b/extension/settings.html
@@ -3,8 +3,16 @@ body {
   min-width: 357px;
   overflow-x: hidden;
 }
+
+#about_pandora_enhancer{
+	font-family: "Arial", "Sans-Serif";
+	font-size: 12pt;
+	font-weight: bold;
+}
 </style>
-pandora enhancer, by brandon<br>
+<div id="about_pandora_enhancer">
+	Pandora Enhancer by Brandon Sachs & <a href="http://curthostetter.com">Curt Hostetter</a>
+</div>
 
 <!--
 <pre style="display: block">
