--- a/extension/settings.html
+++ b/extension/settings.html
@@ -11,7 +11,8 @@ body {
 }
 </style>
 <div id="about_pandora_enhancer">
-	Pandora Enhancer by Brandon Sachs & <a href="http://curthostetter.com">Curt Hostetter</a>
+	Pandora Enhancer by Brandon Sachs & Curt Hostetter
+    <!-- normal links wont work. need to send a message to background.html handler to create a new tab process first -->
 </div>
 
 <!--
