--- a/extension/settings.html
+++ b/extension/settings.html
@@ -12,7 +12,9 @@ body {
 </style>
 <div id="about_pandora_enhancer">
 	Pandora Enhancer by Brandon Sachs & Curt Hostetter
-    <!-- normal links wont work. need to send a message to background.html handler to create a new tab process first -->
+    <br>
+    <!-- Forthcoming settings: notification timeout, custom background image/color, toggle hide ads, toggle lyric selectability -->
+    <!-- normal links wont work dude. you need to send a message to create a new tab process first (chrome.tabs.create) -->
 </div>
 
 <!--
@@ -21,13 +23,10 @@ pandora ad remover, by brandon
 -----
 todo
 	- top horizontal ad is horrible. stretches mainContent to its width. fix that ad.
-	- bug where album art on top right appears off-screen
+	- bug where album art on top right appears off-screen (appears to not be related to this extension - happens when its disabled)
 
 stuff i'd like to learn
 	- local storage for settings
 	- in general, more of the chrome extension and tab api
-
-option ideas (goals)
-	- background color chooser - default #09102a
 </pre>
 -->
