--- a/extension/settings.html
+++ b/extension/settings.html
@@ -12,9 +12,11 @@
             #about_pandora_enhancer{
                 font-weight: bold;
                 padding-top: 10px;
-                margin-left: 10px;
+                margin-left: 5px;
                 font-size: 7pt;
                 border-top: 1px solid black;
+				width: 290px;
+				text-align: center;
             }
 
             #pe-settings{
