configure link in header - setting and appending it are done - how to actually handle display?

--- a/extension/background.html
+++ b/extension/background.html
@@ -92,6 +92,7 @@
                     notification_song_change:       localStorage["notification_song_change"],
                     notification_video_ad:          localStorage["notification_video_ad"],
                     notification_still_listening:   localStorage["notification_still_listening"],
+					header_config:					localStorage["header_config"],
                     debug_mode:						localStorage["debug_mode"]
                 };
                 
