removes the top ribbon. you should NOT pull this build, it is not complete because i forgot to push the work i did last night.

--- a/extension/background.html
+++ b/extension/background.html
@@ -10,6 +10,7 @@
 
             function copyLyrics(lyrics)
             {
+				console.log(lyrics);
                 var clip = jQuery("#PE-clipboard-temp");
                 clip.val(lyrics);
                 clip.select();
@@ -88,6 +89,7 @@
                     remove_videos:					localStorage["remove_videos"],
                     remove_tooltips:				localStorage["remove_tooltips"],
                     remove_still_listening:         localStorage["remove_still_listening"],
+					remove_ribbon:					localStorage["remove_ribbon"],
                     notification_timeout:           localStorage["notification_timeout"],
                     notification_song_change:       localStorage["notification_song_change"],
                     notification_video_ad:          localStorage["notification_video_ad"],
@@ -158,6 +160,11 @@
                         {
                         returnStatus = showPageAction(sender.tab.id);
                     }
+
+					if(request.copyLyrics)
+					{
+						returnStatus = copyLyrics(request.lyricText);
+					}
                 }
 
                 sendResponse(returnStatus);
