--- a/extension/settings.html
+++ b/extension/settings.html
@@ -200,6 +200,7 @@
                         <input class="setting_checkbox" type="checkbox" name="remove_still_listening" id="remove_still_listening"><label for="remove_still_listening">skip "Still Listening?" dialog</label><br />
                         <input class="setting_checkbox" type="checkbox" name="remove_promobox" id="remove_promobox"><label for="remove_promobox">remove promobox + extend Station List</label><br />
                         <input class="setting_checkbox" type="checkbox" name="remove_tooltips" id="remove_tooltips"><label for="remove_tooltips">remove tooltips</label><br />
+						<input class="setting_checkbox" type="checkbox" name="remove_ribbon" id="remove_ribbon"><label for="remove_ribbon">remove top ribbons</label><br />
                         <input class="setting_checkbox" type="checkbox" name="selectable_lyrics" id="selectable_lyrics"><label for="selectable_lyrics">selectable/copy lyrics</label><br />
 						<input class="setting_checkbox" type="checkbox" name="header_config" id="header_config"><label for="header_config">append "configure" link to Pandora header</label><br />
                         <input class="setting_checkbox" type="checkbox" name="debug_mode" id="debug_mode"><label for="debug_mode">debug mode</label>
