starting player controls. i added a "click volume button to mute" options that honestly should be on pandora by default (why didn't they do it???)
we need to discuss other stuff.

--- a/extension/background.html
+++ b/extension/background.html
@@ -128,13 +128,13 @@
                 {
                     //should have a toggle. store previous volume level first.
                     mute = {
-                        url:        'http://www.pandora.com/#/volume/0',
-                        selected:   true,
-                        pinned:     false
-                    };
+                        code: "window.location = 'http://www.pandora.com/#/volume/0'"
+                    }                    
                     
-                    //this works, but refreshes the page. BAD SOLUTION.
-                    chrome.tabs.update(tabID, mute, function(){});
+                    //added permissions in manifest. eh...
+                    chrome.tabs.executeScript(tabID, mute, function(){
+                        console.log("muted without page refresh hopefully");
+                    });
                 }
                 
                 if(playerControl == "thumbs_up")
