--- a/extension/notification.html
+++ b/extension/notification.html
@@ -139,6 +139,7 @@
             <div id="skip"><img src="images/skip.png"></div>
             <div id="mute"><img src="images/mute.png"></div>
             <div id="unmute"><img src="images/unmute.png"></div>
+            <!-- <input type="range"  min="0" max="100" style="width: 95%" /> -->
         </div>        
         
     </body>
