--- a/extension/settings.html
+++ b/extension/settings.html
@@ -239,6 +239,7 @@
 						<input class="setting_checkbox" type="checkbox" name="remove_ribbon" id="remove_ribbon"><label for="remove_ribbon">remove top ribbon</label><br />
                         <input class="setting_checkbox" type="checkbox" name="selectable_lyrics" id="selectable_lyrics"><label for="selectable_lyrics">selectable/copy lyrics</label><br />
 						<input class="setting_checkbox" type="checkbox" name="header_config" id="header_config"><label for="header_config">append "configure" link to Pandora header</label><br />
+                        <input class="setting_checkbox" type="checkbox" name="player_controls" id="player_controls"><label for="player_controls">player controls on song notification</label><br />
                         <input class="setting_checkbox" type="checkbox" name="debug_mode" id="debug_mode"><label for="debug_mode">debug mode</label>
                     </div>
                 </div>
