player controls stay up when paused

--- a/extension/settings.html
+++ b/extension/settings.html
@@ -239,7 +239,6 @@
 						<input class="setting_checkbox" type="checkbox" name="remove_ribbon" id="remove_ribbon"><label for="remove_ribbon">remove top ribbon</label><br />
                         <input class="setting_checkbox" type="checkbox" name="selectable_lyrics" id="selectable_lyrics"><label for="selectable_lyrics">selectable/copy lyrics</label><br />
 						<input class="setting_checkbox" type="checkbox" name="header_config" id="header_config"><label for="header_config">append "configure" link to Pandora header</label><br />
-                        <input class="setting_checkbox" type="checkbox" name="player_controls" id="player_controls"><label for="player_controls">player controls on song notification</label><br />
                         <input class="setting_checkbox" type="checkbox" name="debug_mode" id="debug_mode"><label for="debug_mode">debug mode</label>
                     </div>
                 </div>
@@ -248,6 +247,7 @@
                     <div class="settings-title">Notifications</div>
                     <div class="settings-list">
                         <input class="setting_checkbox" type="checkbox" name="notification_song_change" id="notification_song_change"><label for="notification_song_change">when the song has changed</label><br />
+                        <input class="setting_checkbox" type="checkbox" name="player_controls" id="player_controls"><label for="player_controls">show player controls in notification</label><br />
                         <input class="setting_checkbox" type="checkbox" name="notification_still_listening" id="notification_still_listening"><label for="notification_still_listening">when "Still Listening?" dialog is skipped</label><br />
                         <input class="setting_checkbox" type="checkbox" name="notification_video_ad" id="notification_video_ad"><label for="notification_video_ad">when a video ad is blocked</label><br /><br />
                         <label for="notification_timeout">Display length (seconds):</label><input type="text" class="setting_textbox" name="notification_timeout" maxlength="4">
@@ -263,6 +263,8 @@
             PandoraEnhancer (v<span id="PE-version">80085</span>)
             by <span class="link" id="brandon">Brandon Sachs</span>
             &  <span class="link" id="curt">Curt Hostetter</span>
+            <br>
+            Follow <span class="link" id="twitter">@PandoraEnhancer</span> for updates!
         </div>
     </body>
 </html>
