--- a/extension/background.html
+++ b/extension/background.html
@@ -108,7 +108,8 @@
 					header_config:					localStorage["header_config"],
                     player_controls:                localStorage["player_controls"],
                     debug_mode:						localStorage["debug_mode"],
-					scrobble_session:				localStorage["scrobble_session"]
+					scrobble_session_key:			localStorage["scrobble_session_key"],
+					scrobble_session_name:			localStorage["scrobble_session_name"]
                 };
                 
                 return {'message': settings};
@@ -230,7 +231,7 @@
                         isLiked:    notificationParams.isLiked
                     });
 
-					if(localStorage["scrobble_session"] && localStorage["scrobble_session"] != 'null')
+					if(localStorage["scrobble_session_key"] && localStorage["scrobble_session_key"] != 'null')
 					{
 						var dateNow = new Date();
 						var timestamp = Math.round(dateNow.getTime()/1000);
