--- a/extension/authentication_success.html
+++ b/extension/authentication_success.html
@@ -12,5 +12,6 @@
 <body>
 	<h1>PandoraEnhancer</h1>
 	<p>Congratulations! You have successfully authenticated with Last.fm</p>
+    <p>You can close this window now.</p>
 </body>
 </html>
