--- a/extension/authentication_success.html
+++ b/extension/authentication_success.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
         <script src="js/jquery-1.6.4.min.js"></script>
@@ -8,37 +8,70 @@
             var token = window.location.search;
             var tokenPieces = token.split('=');
             bgPage.responseDispatcher('authenticated', tokenPieces[1]);
-
-            $(function(){
-                setTimeout(function(){
-                    window.close();
-                }, 5000);
-            });
         </script>
 
         <style>
             body {
                 font-family: helvetica, arial, sans-serif;
                 font-size: 10pt;
-                overflow: hidden;
-                width: 300px;
                 text-align: center;
             }
 
             #success {
+				clear: both;
                 padding: 5px;
                 border: 1px solid #d9e0ea;
                 -webkit-border-radius: 8px;
                 background: -webkit-linear-gradient(top, #f0f4f7 0%,#d9e0ea 100%);
-                width: 300px;
+                width: 500px;
             }
+
+			#successContainer{
+				margin-left: auto;
+				margin-right: auto;
+				width: 500px;
+			}
+
+			#text-logo{
+                width: 195px;
+                overflow: hidden;
+                font-size: 18pt;
+                font-weight: bold;
+                color: #082247;
+                line-height: 24px;
+                float: left;
+				text-align: left;
+            }
+            
+            #text-logo-span{
+                color: #0c3a6c;
+            }
+            
+            #text-logo img{
+                float: left;
+                padding: 0 5px 10px 0;
+            }
+			#pageContainer{
+				margin: 0;
+				padding: 0;
+				position: relative;
+				width: 100%;
+			}
         </style>
     </head>
     <body>
-        <div id="success">
-            <h1>PandoraEnhancer</h1>
-            <p>Congratulations! You have successfully authenticated with Last.fm</p>
-            <p>This window will close in 5 seconds.</p>
-        </div>
+		<div id="pageContainer">
+			<div id="successContainer">
+				<div id="text-logo">
+					<img src="images/logo-48.png">
+					Pandora<br>
+					<span id="text-logo-span">Enhancer</span>
+				</div>
+				<div id="success">
+					<p>Congratulations! You have successfully authenticated with Last.fm.</p>
+					<p>You may now close this page.</p>
+				</div>
+			</div>
+		</div>
     </body>
 </html>
