--- a/extension/background.html
+++ b/extension/background.html
@@ -62,6 +62,14 @@
             var notification_timeout, notification;
             function showSongChangeNotification(info)
             {
+				if (info.songName == 'audioad')
+				{
+					info.albumArt		= 'images/logo-32.png';
+					info.artistName		= 'Pandora';
+					info.songName		= 'Audio Ad';
+					info.albumName		= 'Pandora';
+				}
+
                 if (localStorage["player_controls"] != "true")
                 {
                     notification = webkitNotifications.createNotification(
