--- a/extension/notification.html
+++ b/extension/notification.html
@@ -65,7 +65,7 @@
                     $("#thumbs_up").addClass("active");
                 }
 
-				if (param('autoMuteAudioAds') && param('autoMuteAudioAds') == "true" && param('songName') == "Audio Ad"){
+				if (param('autoMute') && param('autoMute') == "true" && param('songName') == "Audio Ad"){
 					$("#mute").click();
 				} else {
 					$("#unmute").click();
