--- a/extension/notification.html
+++ b/extension/notification.html
@@ -65,6 +65,7 @@
                     $("#thumbs_up").addClass("active");
                 }
 
+                //TODO: make this not click unmute every time.
 				if (param('autoMute') && param('autoMute') == "true" && param('songName') == "Audio Ad"){
 					$("#mute").click();
 				} else {
